2007-08-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b99

 * Change: Renamed lib/Form.php to lib/form.php

2007-07-30 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b98

 * Fix: It was possible to bypass the voting permission.

2007-07-28 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b97

 * Fix: GR needs the user Agent. Now GR works again.

   Thanks to Brian Egge for fixing and sending a patch.

2007-07-24 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b96

 * Fix: Handle case where the featured item or the parentalbum of it 
		was deleted.

 * Fix: Popup code for some album actions was wrong.

 * Fix: Added popups/featured-item.php to safeToInclude array.

 Thanks to Kai Tomalik for reporting the bugs above.

2007-07-23 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b95

 * Fix: Use correct language domain lin lib/album.php

 * Fix: Add param for album options selectbox.

 * Change: Little css for navigator.
 
2007-07-21 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b94

 * Fix: Return from login/logout was broken.

 * Fix: Removed debug code in login.php

 * Fix: Make register button a popup to work correct.

 * Change: Some Layout nicify.

2007-07-21 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b93

 * CHANGE: Consolidate code for album commmands !!
		   - All code now in getAlbumCommands()
		   - New js function 'jopen' that handles popups and urls
		
 * Change: getItemActions() now only returns the options.

2007-07-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b92

 * Fix: Avoid js errors when clicking on arrow key for a button that
        actually does not exist.

2007-07-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b91

 * CHANGE: Created function getRootAlbumCommands()
		   Removed layout/adminAlbumCommands.inc

 * Chane: Added rootalbum commands in matrix theme.

 * Fix: Correct use for zero case in some gTranslate calls.

 * New: Added requirement 'votingOn' to surpress non working options.

 * HTML nicify at various places.

2007-07-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b90
