@@ -1,3 +1,13 @@
+2007-08-11 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b100
+
+ * New: function getDefaultFilename() in lib/filesystem.php
+
+ * Change: Local templates (without .default) can now be used.
+
+ * Fix: Added 'up' breadcrumb in slideshow in case the returnToLink is off.
+
+ ----- FEATURE FREEZE FOR GALLERY 1.6 ----
+
 2007-08-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b99
 
  * Change: Renamed lib/Form.php to lib/form.php
